--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "lodash.defaultsdeep": "^4.6.1",
     "lodash.get": "^4.4.2",
-    "modern-rcon": "^1.0.3"
+    "rcon-client": "^4.2.3"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
